<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transperent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/_12sdp"
        app:cardCornerRadius="@dimen/_2sdp"
        app:cardElevation="@dimen/_10sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog_forgot_password_txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/_16sdp"
                android:text="@string/text_forgot_password_title"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dialog_forgot_password_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dialog_forgot_password_txt_title"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_24sdp"
                android:backgroundTint="#BC67D4"
                android:hint="@string/text_forgot_password_email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="#3A28B0" />

            <TextView
                android:id="@+id/dialog_forgot_password_txt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dialog_forgot_password_edit_email"
                android:layout_alignParentEnd="true"
                android:paddingStart="@dimen/_12sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="#3A28B0"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_forgot_password_txt_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dialog_forgot_password_edit_email"
                android:layout_toStartOf="@+id/dialog_forgot_password_txt_cancel"
                android:paddingStart="@dimen/_24sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_24sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/ok"
                android:textColor="#3A28B0"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>