<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.trust_tag.BaseActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="qaReprintViewModel"
            type="com.gsp.trusttags.mobile.mapping.viewModel.QAReprintViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/activity_qa_remap_textview_send_mail">

            <TextView
                android:id="@+id/activity_qa_reprint_textview_scan_shipper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/shape_background_without_corner"
                android:gravity="center"
                android:onClick="@{(v) -> qaReprintViewModel.scanShipperClick()}"
                android:padding="@dimen/_8sdp"
                android:text="@string/text_reprint_shipper"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/activity_qa_reprint_textview_scan_sku_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_qa_reprint_textview_scan_shipper"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/shape_background_without_corner"
                android:gravity="center"
                android:onClick="@{(v) -> qaReprintViewModel.scanSKUCodeClick()}"
                android:padding="@dimen/_8sdp"
                android:text="@string/text_reprint_scan_sku_code"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/activity_qa_reprint_textview_scan_second_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_qa_reprint_textview_scan_shipper"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/shape_background_without_corner"
                android:gravity="center"
                android:onClick="@{(v) -> qaReprintViewModel.scanSecondLevelCodeClick()}"
                android:padding="@dimen/_8sdp"
                android:text="@string/text_reprint_second_level"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/activity_qa_reprint_textview_scan_first_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_qa_reprint_textview_scan_second_level"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/shape_background_without_corner"
                android:gravity="center"
                android:onClick="@{(v) -> qaReprintViewModel.scanFirstLevelCodeClick()}"
                android:padding="@dimen/_8sdp"
                android:text="@string/text_reprint_first_level"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/activity_qa_reprint_textview_scan_first_level"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/text_reprint_your_code"
                    android:textSize="@dimen/_14sdp" />

                <ImageView
                    android:id="@+id/activity_qa_reprint_imageview_qr_code"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_gravity="center_horizontal"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/activity_qa_remap_textview_send_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/shape_background_without_corner"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/send_code_email"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:visibility="gone"/>

    </RelativeLayout>

</layout>