<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.trust_tag.BaseActivity">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:background="@color/transperent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_create_shipper_sku"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_14sdp" />

            <Spinner
                android:id="@+id/activity_create_shipper_spinner_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/text_create_shipper_batch_no"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_14sdp" />

            <Spinner
                android:id="@+id/activity_create_shipper_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtLineNo"
                android:hint="Line No."
                android:inputType="number"/>
            <TextView
                android:id="@+id/activity_create_shipper_start_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/shape_rounded_background_submit_button"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/text_create_shipper_start_scanning"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>