<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.trust_tag.ActivitySplash">

    <data>

        <variable
            name="loginViewModel"
            type="com.gsp.trusttags.mobile.mapping.viewModel.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_background_info_screen"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/activity_login_screen_img_left_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_100sdp"
            android:src="@drawable/left_sticky"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/activity_login_screen_img_right_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/right_sticky"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/activity_login_screen_img_bottom_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/bottom_sticky"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/activity_login_img_logo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_64sdp"
            android:src="@drawable/ic_logo_with_name_white"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_login_img_logo"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_16sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_login_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/activity_login_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/text_login_email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_login_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_login_input_email">

                <EditText
                    android:id="@+id/activity_login_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/text_login_password_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/activity_login_checkbox_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_login_input_password"
                android:layout_marginTop="@dimen/_8sdp"
                android:drawableTint="@color/white"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/text_login_remember_me"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/activity_login_txt_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_login_input_password"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/text_login_forget_password"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/activity_login_txt_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_100sdp"
            android:background="@drawable/shape_rounded_background_submit_button"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/text_login_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>

</layout>